<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageVGoal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="170dp"
        android:layout_centerHorizontal="true" >
        
        <TextView
	        android:id="@+id/textView1"
	        style="@android:style/TextAppearance.Medium"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/please_goto" />
	
	    <TextView
	        android:id="@+id/textVInstructions"
	        style="@android:style/TextAppearance.Medium"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="TextView" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="140dp"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/please_goto_cont" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:minWidth="200dp"
        android:text="@string/ok" />

</RelativeLayout>